@@ -6,6 +6,10 @@
 		- Added close, close all and save all actions.
 - Color icon border now reflects the color's edge color.
 - Changing to draw mode while in free camera now causes the camera to be changed to top.
+- Corrections to the primitive generator:
+	- Fixed: "Hi-Res" was not prepended to the names of 48/ primitives.
+	- Fixed: Checking the Hi-Res option would not allow segment values over 16.
+	- Added support for multiple spaces before the ring number.
 
 =================================================
 == Changes in version 0.2-alpha
